# ChangeLog for dev-ruby/amq-protocol
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/amq-protocol/ChangeLog,v 1.11 2013/09/10 18:51:17 graaff Exp $

  10 Sep 2013; Hans de Graaff <graaff@gentoo.org> -amq-protocol-1.0.1.ebuild,
  -amq-protocol-1.2.0.ebuild, -amq-protocol-1.3.0.ebuild:
  Cleanup.

*amq-protocol-1.6.0 (23 May 2013)

  23 May 2013; Hans de Graaff <graaff@gentoo.org> +amq-protocol-1.6.0.ebuild:
  Version bump.

*amq-protocol-1.3.0 (27 Apr 2013)

  27 Apr 2013; Hans de Graaff <graaff@gentoo.org> +amq-protocol-1.3.0.ebuild:
  Version bump.

*amq-protocol-1.2.0 (23 Feb 2013)

  23 Feb 2013; Hans de Graaff <graaff@gentoo.org> +amq-protocol-1.2.0.ebuild:
  Version bump.

  23 Feb 2013; Hans de Graaff <graaff@gentoo.org> -amq-protocol-0.9.0.ebuild,
  -amq-protocol-0.9.4.ebuild, -amq-protocol-0.9.5.ebuild:
  Cleanup.

*amq-protocol-1.0.1 (14 Dec 2012)

  14 Dec 2012; Hans de Graaff <graaff@gentoo.org> +amq-protocol-1.0.1.ebuild:
  Version bump.

*amq-protocol-0.9.5 (02 Oct 2012)

  02 Oct 2012; Hans de Graaff <graaff@gentoo.org> +amq-protocol-0.9.5.ebuild:
  Version bump.

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata.xml so that it's the same as most other packages.

  29 Jul 2012; Hans de Graaff <graaff@gentoo.org> amq-protocol-0.9.4.ebuild:
  Add x86 keyword since all this code was part of amqp before.

*amq-protocol-0.9.4 (28 Jul 2012)

  28 Jul 2012; Hans de Graaff <graaff@gentoo.org> +amq-protocol-0.9.4.ebuild:
  Version bump.

*amq-protocol-0.9.0 (09 May 2012)

  09 May 2012; Hans de Graaff <graaff@gentoo.org> +amq-protocol-0.9.0.ebuild,
  +metadata.xml:
  Initial import. New dependency of forthcoming amqp versions.