@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST amq-protocol-1.6.0.gem 41472 SHA256 05e2ab33c39588f04c96649fd4fb6c1c6295a7fabe18310db16e2555c93a4c7f SHA512 596b6d1f80c97584d4cb01a9f13547b963f9c59f99ff536d46c999775d738517ac35a9539e6db1970aad6a7e86606f4680be635b46f7cab61b4e3d92aec42f70 WHIRLPOOL 2b1691aaaaa451f30f9da122dc1f851edf8ed5be06b8cd6f6e4383e23f0899383090ce7fb05deed4a9fd9fe4522b6ac31f595bfa439286e864b90a6f50f01fef
+DIST amq-protocol-1.7.0.gem 41472 SHA256 8bacc5c7f3672a0a1a010eca6dde734952dc47aa6a3165a64a920b8334490a76 SHA512 4f894ddd3b0c14252715e8751629c96301b8dadb255151d5469be601dbd23b48c57bba3c0ad1b45257e0a502b1cac6f4ef88d957f24dca9acc35fdc72b49fbd1 WHIRLPOOL 814ddc87a1d1538d5ebf475e84dc6c4f4008f1b99ad72248d20a8ed836383bd5a45df8fbd864618a45871cd83e2805815c520922cb545290abf81251ca3fe049
 EBUILD amq-protocol-1.6.0.ebuild 681 SHA256 9e88817928adf9b896e6185ce83f36eccd86555a6164f78a21a8e10c66f222db SHA512 f0287095065a6fbf90b51b5d1d235f92399d106a8f50d9fde841c466afccf2a6862e04176764ed3fb158fbd1ac4276f13da9fd55fe2bea883e7aac5103517958 WHIRLPOOL 653480703ed9794bb9ef7b9e9f0c43748ce9752a98c657e44d773ad288d6be2254c9f4f38d4499bebfbfafa64dfd6bdaca69655db0f8dacd396a6851c052860c
-MISC ChangeLog 1765 SHA256 ebd7cc6a23f7cfeb4b9078e251e9b3b7c231d775a5b38cf3fd0f3975bb180a1a SHA512 0379bb090a8805cd2ca0b428cd7910b2c01575e62983d48dcb0d4f3fd81c0eb5ed2a675c832c4319349e61e7f5827e2665d96c19be3cad6e6ae2f247dcebaae1 WHIRLPOOL 8c88a1652e7dd01ffc27bf3410e0312883eb5b8c2d101d72bcc3c96f56e67887900ab7b6f85b059a3d7296643c7642013e1c03bc444d53570871c1e4cf60483c
+EBUILD amq-protocol-1.7.0.ebuild 681 SHA256 0eb2e44b9e23d4613c463a9dc8c06976e25ce3639814bfd464b63f1b791d1a6c SHA512 2ca759253824b1e6602586ade572b6c086c8382bbc0ce4bc3f2803404beefd4c112c812363004275f325febbc3269d04d04c6c95621423d05a3f459f317b20cf WHIRLPOOL 1424d7034cef037b603b278edd466bb09d2d57fc9a640cc00f88631cc7cd2be2b5381f930c336b95e5ce3ff12c910a8c12d3c2a6548724369d56787b0977e319
+MISC ChangeLog 1895 SHA256 e763e51666b3d0ac7f994ace86af13b83e573be86887990a851893e66b79ad75 SHA512 81fa2fd266a4b8c546da3786b13bef782b56b1e9bc7993e05e555521f671f83bd725fcc586a2ae857c7156fb5b8a1b542f46a8f90387c0103d7fe9a7cecd2be2 WHIRLPOOL 235676b805dc3567d2aa1a43bbbf09b605aa0f3d4009c33a70ca7a85ebd11e376c5816f1d5a6905a2a7b464fe6b0c5a637316277cd7e3c64f5f99e0b45a8b1f3
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlIvaiYACgkQiIP6VqMIqNcSYgD/Z8TEItEunc7qzhKuZaK5QTwF
-6En9VUPwdanFYg9bBdcA/iqOIIPfbBjEsOrCHl1NTR+LIiGMEuQfAfZrlHkomjTy
-=UNY4
+iF4EAREIAAYFAlIvaqkACgkQiIP6VqMIqNfOLwD/TEHnst2b/uMpIWVmtMR0nHG8
+k56UbQUngvnL8K35c6YA/jZmCnsbvZJnKR59+KQd5xPZKRhCYzsmKjEW4vjyIYTy
+=0S6i
 -----END PGP SIGNATURE-----
