@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/amq-protocol
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/amq-protocol/ChangeLog,v 1.11 2013/09/10 18:51:17 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/amq-protocol/ChangeLog,v 1.12 2013/09/10 18:53:28 graaff Exp $
+
+*amq-protocol-1.7.0 (10 Sep 2013)
+
+  10 Sep 2013; Hans de Graaff <graaff@gentoo.org> +amq-protocol-1.7.0.ebuild:
+  Version bump.
 
   10 Sep 2013; Hans de Graaff <graaff@gentoo.org> -amq-protocol-1.0.1.ebuild,
   -amq-protocol-1.2.0.ebuild, -amq-protocol-1.3.0.ebuild:
